# azlagor

./: CMakeLists.txt
src/: main.cpp
src/app/: app.cpp  app.hpp
src/sdk/: sdk.hpp
src/sdk/animationsystem/: CAnimationGroup.hpp
src/sdk/animgraphlib/: CTargetSelectorUpdateNode.hpp  CTargetWarpUpdateNode.hpp
src/sdk/animlib/: CNmBlend1DNode__CDefinition.hpp  CNmClipSelectorNode__CDefinition.hpp  CNmGraphDataSet.hpp  CNmGraphVariation.hpp  CNmIDToFloatNode__CDefinition.hpp  CNmLayerBlendNode__CDefinition.hpp  CNmParameterizedBlendNode__Parameterization_t.hpp  CNmParameterizedClipSelectorNode__CDefinition.hpp  CNmParameterizedSelectorNode__CDefinition.hpp  CNmSelectorNode__CDefinition.hpp
src/sdk/client/: AttackData_t.hpp  BaseNPC_DestructiblePartData_DamagePassthroughType.hpp  CAI_BaseNPCGraphController.hpp  CAI_BaseNPCVData.hpp  CAI_BaseNPC_DestructiblePartData.hpp  CAI_BaseNPC_DestructiblePartHitGroupInfoAndData.hpp  CAI_BaseNPC_DestructiblePartRuntimeData.hpp  CAI_BaseNPC_DestructiblePartRuntimeDataVector.hpp  CAI_CitadelNPCVData.hpp  CAI_NPC_TrooperVData.hpp  CAbilityAstroRifleVData.hpp  CAbilityBloodShardsVData.hpp  CAbilityBouncePadVData.hpp  CAbilityBullChargeVData.hpp  CAbilityCadenceAnthemVData.hpp  CAbilityCadenceCrescendoVData.hpp  CAbilityCadenceGrandFinaleVData.hpp  CAbilityCadenceLullabyVData.hpp  CAbilityCadencePrimaryWeaponVData.hpp  CAbilityCadenceSilenceContraptionsVData.hpp  CAbilityCardTossVData.hpp  CAbilityChargedShotVData.hpp  CAbilityChargedTackleVData.hpp  CAbilityChronoSwapVData.hpp  CAbilityCrowdControlVData.hpp  CAbilityDashVData.hpp  (+937 more)
(+1511 files in other folders)
